@@ -3,6 +3,7 @@
 - dclab add position along channel axis from img
 0.5.8
 - dclab (0.1.6.dev2): Allow to disable KDE computation
+- Support OpenCV 3 (#45)
 0.5.7
 - Bugfixes:
   - Filtering: Plot selection resets to last item unexpectedly
